--- a/app/src/main/res/layout/fragment_bar_details.xml
+++ b/app/src/main/res/layout/fragment_bar_details.xml
@@ -50,14 +50,12 @@
         android:layout_below="@id/toolbar"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:clickable="true"
         app:cardCornerRadius="18dp"
         app:strokeWidth="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="18dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/monthspendingtext"
@@ -72,21 +70,24 @@
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/barChart"
                 android:layout_width="match_parent"
-                android:layout_height="320dp"
+                android:layout_height="220dp"
                 android:layout_below="@id/monthspendingtext"
-                android:layout_margin="8dp"
+                android:layout_marginBottom="16dp"
                 android:transitionName="pieChart" />
 
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
 
-    <TextView
-        android:id="@+id/transCategoriesText"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/categoriesRv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/barChartCard"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        tools:listitem="@layout/item_expense_category" />
+
 
 </RelativeLayout>
