--- a/app/src/main/res/layout/item_expense_category.xml
+++ b/app/src/main/res/layout/item_expense_category.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainCard"
@@ -7,56 +7,75 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
-    app:cardCornerRadius="12dp"
     android:layout_marginBottom="8dp"
     android:clickable="true"
+    android:paddingTop="8dp"
+    android:paddingEnd="8dp"
+    android:paddingBottom="8dp"
+    app:cardCornerRadius="12dp"
     app:strokeWidth="0dp">
 
+
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:id="@+id/mainLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical">
 
-        <RelativeLayout
-            android:id="@+id/mainLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp">
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/expandBtn"
+            style="@style/Widget.Material3.Button.TextButton"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center_vertical"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            app:icon="@drawable/ic_round_arrow_drop_down_24"
+            app:iconGravity="textStart"
+            app:iconPadding="0dp"
+            app:iconSize="24dp"
+            app:iconTint="@android:color/tab_indicator_text"
+            />
 
-            <ImageView
-                android:id="@+id/categoryImage"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:contentDescription="@string/user_profile_picture"
-                tools:src="@drawable/ic_round_wine_bar_24" />
+        <ImageView
+            android:id="@+id/categoryImage"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@id/expandBtn"
+            android:contentDescription="@string/user_profile_picture"
+            tools:src="@drawable/ic_round_wine_bar_24" />
 
-            <TextView
-                android:id="@+id/categoryName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="8dp"
-                android:layout_toStartOf="@id/categoryAmount"
-                android:layout_toEndOf="@id/categoryImage"
-                tools:text="Restaurant" />
-
-            <TextView
-                android:id="@+id/categoryAmount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                tools:text="2555550.00 RON" />
-        </RelativeLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/transactionsRv"
+        <TextView
+            android:id="@+id/categoryName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/mainLayout"
-            android:visibility="gone"
-            tools:itemCount="3"
-            tools:listitem="@layout/item_transaction"
-            tools:visibility="gone" />
+            android:layout_centerVertical="true"
+            android:layout_marginStart="8dp"
+            android:layout_toStartOf="@id/categoryAmount"
+            android:layout_toEndOf="@id/categoryImage"
+            tools:text="Restaurant" />
 
+        <TextView
+            android:id="@+id/categoryAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            tools:text="2555550.00 RON" />
     </RelativeLayout>
-</com.google.android.material.card.MaterialCardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/transactionsRv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/mainLayout"
+        android:visibility="gone"
+        tools:itemCount="3"
+        tools:listitem="@layout/item_transaction"
+        tools:visibility="gone" />
+
+</RelativeLayout>
