--- a/app/src/main/res/layout/item_transaction_small.xml
+++ b/app/src/main/res/layout/item_transaction_small.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,80 +8,74 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="12dp"
     android:clickable="true"
+    android:padding="8dp"
     app:cardCornerRadius="18dp"
     app:strokeWidth="0dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/transactionImage"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/user_profile_picture"
+        android:src="@drawable/ic_baseline_person_24" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_marginStart="12dp"
+        android:layout_toStartOf="@id/moneyLayout"
+        android:layout_toEndOf="@id/transactionImage"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/transactionImage"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_centerVertical="true"
-            android:contentDescription="@string/user_profile_picture"
-            android:src="@drawable/ic_baseline_person_24" />
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/transactionPerson"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_toStartOf="@id/moneyLayout"
-            android:layout_toEndOf="@id/transactionImage"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            tools:text="Daniela" />
 
-            <TextView
-                android:id="@+id/transactionPerson"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="Daniela" />
+        <TextView
+            android:id="@+id/transactionTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textStyle="normal"
+            tools:text="Transaction Title " />
 
-            <TextView
-                android:id="@+id/transactionTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textStyle="normal"
-                tools:text="Transaction Title " />
-
-            <TextView
-                android:id="@+id/transactionDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="10sp"
-                tools:text="Fri, Aug 12, 15:48" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/moneyLayout"
+        <TextView
+            android:id="@+id/transactionDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:orientation="vertical">
+            android:textSize="10sp"
+            tools:text="Fri, Aug 12, 15:48" />
+    </LinearLayout>
 
-            <TextView
-                android:textSize="12sp"
-                android:id="@+id/transactionAmount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:textColor="#D50000"
-                android:textStyle="bold"
-                tools:text="- 90.0 lei" />
+    <LinearLayout
+        android:id="@+id/moneyLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/transactionCategory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:textSize="10sp"
-                tools:text="Transport" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/transactionAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:textColor="#D50000"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            tools:text="- 90.0 lei" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/transactionCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:textSize="10sp"
+            tools:text="Transport" />
+    </LinearLayout>
 
-</com.google.android.material.card.MaterialCardView>
+</RelativeLayout>
