Date picker layout changes

--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -177,9 +177,10 @@
             </RelativeLayout>
 
             <DatePicker
+                android:theme="@style/DialogTheme"
                 android:id="@+id/simpleDatePicker"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="140dp"
                 android:layout_below="@id/transactionCategoryLayout"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="18dp"
