--- a/app/src/main/res/layout/fragment_bar_details.xml
+++ b/app/src/main/res/layout/fragment_bar_details.xml
@@ -97,6 +97,7 @@
                 android:layout_marginTop="18dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:layoutAnimation="@anim/layout_animation_fall_down"
                 tools:listitem="@layout/item_expense_category" />
         </RelativeLayout>
 
