--- a/app/src/main/res/layout/item_spent_most.xml
+++ b/app/src/main/res/layout/item_spent_most.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:gravity="center_horizontal"
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
