--- a/app/src/main/res/anim/item_animation_from_right.xml
+++ b/app/src/main/res/anim/item_animation_from_right.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="@integer/categories_insert_animation_duration">
+    android:duration="@integer/categories_insert_slide_right_animation_duration">
 
     <translate
+        android:fromXDelta="100%"
         android:interpolator="@android:anim/decelerate_interpolator"
-        android:fromXDelta="100%p"
-        android:toXDelta="0"
-        />
+        android:toXDelta="0%" />
 
     <alpha
         android:fromAlpha="0.5"
-        android:toAlpha="1"
         android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-        />
+        android:toAlpha="1" />
 
 </set>
