--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -346,7 +346,10 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_above="@id/barDetailsBtn"
-                                android:layout_margin="8dp" />
+                                android:layout_marginStart="8dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginEnd="8dp"
+                                android:layout_marginBottom="8dp" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/barDetailsBtn"
