--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -69,6 +69,9 @@
         <argument
             android:name="walletCurrency"
             app:argType="string" />
+        <action
+            android:id="@+id/action_listTransactionsFragment_to_addTransactionLayout"
+            app:destination="@id/addTransactionLayout" />
     </fragment>
     <fragment
         android:id="@+id/editWalletFragment"
